small typo fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>M Imaad Iqbal</h2>
         <p>I'm
-          <span class="typed" data-typed-items="an Engineer, a Researcher, a Learner">Engineer</span>
+          <span class="typed" data-typed-items="an Engineer, a Researcher, a Learner">an Engineer</span>
           <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
         </p>
