--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>26 September 2004</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.galaxygamerman.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>galaxygamerman.onrender.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 63665 16699</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Mangalore, Karnataka, India</span></li>
                 </ul>
